.provarCaches/00D5f000005vwGkEAI/objects/rstk__poroutestep__c.object
<CustomObject>
    <description>poroutestep__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poroutestep_poroute__r.rstk__externalid__c + &apos;_&apos; +  rstk__poroutestep_stepid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poroutestep_stepid__c + &apos; (&apos; +  LEFT( rstk__poroutestep_desc__c , (77 -  LEN(rstk__poroutestep_stepid__c) )) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poroutestep_stepid__c + &apos; &apos; +  rstk__poroutestep_poroute__r.rstk__poroute_routeid__c + &apos; &apos; +  rstk__poroutestep_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_carrier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipLabel>Shipment Route Master Steps</relationshipLabel>
        <relationshipName>sycarrierporoutesteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_poroute__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Route ID</label>
        <referenceTo>rstk__poroute__c</referenceTo>
        <relationshipLabel>Shipment Route Master Steps</relationshipLabel>
        <relationshipName>poroutesteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Provider</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Shipment Route Master Steps</relationshipLabel>
        <relationshipName>povendporoutesteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Step Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_stepid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Step ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poroutestep_transtime__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transit Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Shipment Route Master Steps</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Shipment_Route_Master_Steps</fullName>
        <columns>NAME</columns>
        <columns>rstk__poroutestep_stepid__c</columns>
        <columns>rstk__poroutestep_seq__c</columns>
        <columns>rstk__poroutestep_desc__c</columns>
        <columns>rstk__poroutestep_carrier__c</columns>
        <columns>rstk__poroutestep_poroute__c</columns>
        <columns>rstk__poroutestep_provider__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Shipment Route Master Steps</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Route Master Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Route_Step_ID_cannot_change</fullName>
        <active>true</active>
        <description>Route Step ID cannot be changed.</description>
        <errorConditionFormula>ISCHANGED(rstk__poroutestep_stepid__c)</errorConditionFormula>
        <errorMessage>Route Step ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>